# dojo-stellar

./: .gitignore  LICENSE  README orig.md  README-en.md  README.md  README_en.md
docs/: challenge1.md  challenge1_en.md
solutions/: challenge1-en.md  challenge1.md  challenge2-en.md  challenge2.md  challenge3-en.md  challenge3.md  challenge4-en.md  challenge4.md  challenge5-en.md  challenge5.md  logo_lumen.png:Zone.Identifier
src/backend/soroban-crud/: README.md
src/backend/soroban-crud/contracts/book/: Cargo.toml
src/backend/soroban-crud/contracts/book/src/: lib.rs  test.rs
src/backend/soroban-crud/contracts/book/test_snapshots/test/: test_create_and_read.1.json  test_create_duplicate_book.1.json  test_delete_book.1.json  test_delete_nonexistent_book.1.json  test_update_book.1.json  test_update_nonexistent_book.1.json
src/backend/soroban-crud/contracts/hello/: Cargo.toml
src/backend/stellar-api/: README.md  cmc_data_summary.json  cmc_quote.json  cmc_top.json  data_simulations.py  hello.py  history_data_summary.json  load_config.py  main.py  merged_data_summary.json  oracle_data.py  oracle_fetch.py  oracle_scheduller.py  pyproject.toml  testapi2.py  yf_data_summary.json
src/frontend/stellar-explorer/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/frontend/stellar-explorer/src/: App b1.vue  App b1.vue.js  App.vue  App.vue.js  App_org.vue.js  main.js  main.ts
src/frontend/stellar-explorer/src/assets/: logo_lumen.png:Zone.Identifier  style.css
src/frontend/stellar-explorer/src/components/: BalanceSearch.vue  BlockSearch.vue  BlockchainData.vue  BlockchainData.vue.js  Charts.vue  Charts.vue.js  Footer.vue  Footer.vue.js  Header.vue  Header.vue.js  LatestLedgers.vue  LatestLedgers.vue.js  MainTitle.vue  MainTitle.vue.js  Results.vue  Results.vue.js  SearchBar.vue  SearchBar.vue.js  StatisticsCards.vue  StatisticsCards.vue.js  TheWelcome.vue.js  TransactionSearch.vue  tesy.json
src/frontend/stellar-explorer/src/router/: index.js
src/frontend/stellar-explorer/src/views/: AboutView.vue.js  HomeView.vue.js
src/stellar-amm-dex/: package-lock.json  package.json
src/stellar-amm-dex/src/: amm.ts  index.ts  wallet.ts
src/wallets/lumen-stellar-wallet-extension/: Cargo.toml  LICENSE_MIT  manifest.json
src/wallets/lumen-stellar-wallet-extension/src/: lib.rs
src/wallets/lumen-stellar-wallet-extension/www/: index.html  main.js
src/wallets/stellar_cli_wallet/: Cargo.toml  README.md
src/wallets/stellar_cli_wallet/src/: keystore.rs  main.rs  stellar_rpc.rs  utils.rs  wallet.rs
