[package]
name = "stellar_cli_wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }  # For HTTP requests
serde = { version = "1.0", features = ["derive"] }   # For JSON serialization/deserialization
serde_json = "1.0"                                   # For JSON handling
hex = "0.4"                                          # For hex encoding/decoding
aes = "0.7"                                          # For AES encryption
block-modes = "0.8"                                  # For block cipher modes (e.g., CFB)
rand = "0.8"                                         # For random number generation
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rpassword = "6.0"
tokio = { version = "1", features = ["full"] }
base32 = "0.4"
crc = "2.1"
sha2 = "0.10"