[package]
name = "stellar_cli_wallet_lumen"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for interacting with Stellar and Soroban networks."
license = "MIT"
repository = "https://github.com/robdicoco/dojo-stellar/tree/main/src/wallets/stellar_cli_wallet"
keywords = ["stellar", "soroban", "cli", "blockchain","lumen"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"
authors = ["Rob DC <pavusa@gmail.com>"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }  # For HTTP requests
serde = { version = "1.0", features = ["derive"] }   # For JSON serialization/deserialization
serde_json = "1.0"                                   # For JSON handling
hex = "0.4"                                          # For hex encoding/decoding
aes = "0.7"                                          # For AES encryption
block-modes = "0.8"                                  # For block cipher modes (e.g., CFB)
rand = "0.8"                                         # For random number generation
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rpassword = "6.0"
tokio = { version = "1", features = ["full"] }
base32 = "0.4"
crc = "2.1"
sha2 = "0.10"


[dev-dependencies]
mockito = "0.32"
serial_test = "3.2.0"
wiremock = "0.6.2"